tests/files/type_checker_tests/should_pass/048.cmdr
//Test that ternary operations type check
x = if true then 1 else 0;
