tests/files/type_checker_tests/should_fail/091.cmdr
//Should fail if ternary condition is not a bool
x = if 1 then true else false;
